# dtools

./: .prettierrc  :w  =w  README.md  TODO.md  bun.lockb  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: js.yml  rust.yml
src/: App.tsx  commands.ts  globals.css  main.tsx  routeTree.gen.ts
src-data/: .gitignore  README.md  download.sh
src-tauri/: .gitignore  Cargo.toml  ]  tauri.conf.json
src-tauri/capabilities/: chat.json  main.json
src-tauri/permissions/: commands.json
src-tauri/src/: app.rs  config.rs  constants.rs  downloader.rs  main.rs  node.rs  state.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/chat/: config.rs  feature.rs  mod.rs
src-tauri/src/features/windows/: mod.rs
src-tauri/src/sniffer/: config.rs  mod.rs  network.rs  parser.rs  protocol.rs
src-tauri/src/sniffer/parser/: metadata.rs  packet.rs  wrapper.rs
src-tauri/src/sniffer/protocol/: protocol.rs
src-tauri/tests/fixtures/: cap.pcap
src-tauri/utils/config/: Cargo.toml
src-tauri/utils/extractor/: Cargo.toml
src-tauri/utils/extractor/src/: constants.rs  downloader.rs  lib.rs
src-tauri/utils/sniffer/: Cargo.toml
src-tauri/utils/sniffer/src/: downloader.rs  lib.rs  network.rs  parser.rs  protocol.rs
src-tauri/utils/sniffer/src/parser/: metadata.rs  packet.rs  wrapper.rs
src-tauri/utils/sniffer/tests/fixtures/: tauri.conf.json
src-ui/: App.tsx  bindings.ts  commands.ts
src/assets/font/: inter.css
src/components/: image-cache.tsx  page-title.tsx  titlebar.tsx
src/components/chat/: form.tsx
src/components/chat/item/: index.tsx
src/components/dofus/: dofus-item-icon.tsx  dofus-item.tsx  sprite.tsx
src/components/inner-sidebar/: index.tsx  layout.tsx
src/components/sidebar/: apps.tsx  footer.tsx  header.tsx  index.tsx  layout.tsx
src/components/ui/: button-tooltip.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  switch.tsx  tooltip.tsx
src/lib/: image-caching.ts
src/lib/entities/: channels.ts  interface.ts  items.ts  translations.ts  utils.ts
src/lib/features/chat/: history.ts
src/routes/: __root.tsx
src/routes/dashboard/: _layout.tsx
src/routes/dashboard/_layout/: chat.tsx  home.tsx  index.tsx  settings.tsx
src/routes/dashboard/_layout/(chat)/: chat.$chat_id.tsx  chat.$tab_id.edit.tsx  chat.$tab_id.index.tsx  chat.$tab_id.tsx  chat.index.tsx  chat.new.tsx  chat.tsx
src/routes/features/: chat.tsx
src/routes/features/(chat)/: chat.tsx
src/stores/: chat.store.ts  config.store.ts
