[package]
name = "dtools"
version = "0.0.0"
description = "A Tauri App"
authors = ["Nathan David <me@vahor.fr>"]
edition = "2021"

[workspace]
members = [ "utils/config",
	"utils/extractor",
	"utils/sniffer"
]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = { workspace = true }
tauri-plugin-store = { workspace = true }

sniffer = { path = "./utils/sniffer"}
extractor = { path = "./utils/extractor" }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }

[workspace.dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
once_cell = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
reqwest = { version = "0.12.2", features = ["blocking"] }
regex = "1.10.4"
lazy_static = "1.4.0"
zip = "0.6.6"
tempdir = "0.3.7"
fs_extra = "1.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
