[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri-plugin-fs = { workspace = true }
serde = { workspace = true }
tauri = { workspace = true}
regex = {workspace = true}
anyhow = {workspace = true}
reqwest = {workspace = true}
lazy_static = {workspace = true}
zip = {workspace = true}
tempdir = {workspace = true}
fs_extra = {workspace = true}
