[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-plugin-fs = { workspace = true }
serde = { workspace = true }
tauri = { workspace = true}
regex = {workspace = true}
anyhow = {workspace = true}
reqwest = {workspace = true}
lazy_static = {workspace = true}
zip = {workspace = true}
tempdir = {workspace = true}
fs_extra = {workspace = true}
