[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-plugin-fs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-aux = { workspace = true }
tauri = { workspace = true}
regex = {workspace = true}
anyhow = {workspace = true}
lazy_static = {workspace = true}
extractor = {workspace = true}
pcap = {workspace = true}
tokio = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
pcap-file = {workspace = true}
